# FlowHistory

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  claude.md  docker-compose.yml  entrypoint.sh  pyproject.toml  tailwind.config.js
.github/workflows/: build-and-push.yml  ci.yml  cleanup-pr-image.yml  release.yml  tests.yml
backup/: admin.py  apps.py  context_processors.py  forms.py  metrics.py  models.py  tests.py  urls.py  views.py
backup/middleware/: demo_mode.py  simple_auth.py
backup/migrations/: 0001_initial.py  0002_restore_record.py  0003_backuprecord_notes.py  0004_backuprecord_is_pinned.py  0005_noderedconfig_always_backup.py  0006_remove_noderedconfig_name_and_more.py  0007_add_instance_fields.py  0008_populate_instance_fields.py  0009_finalize_instance_fields.py  0010_notify_fields.py  0011_add_import_trigger_choice.py
backup/services/: backup_service.py  diff_service.py  discovery_service.py  docker_service.py  flow_parser.py  import_service.py  notification_service.py  remote_service.py  restore_service.py  retention_service.py  watcher_service.py
backup/templatetags/: settings_tags.py
backup/tests/: helpers.py  test_api.py  test_auth.py  test_backup.py  test_commands.py  test_context_processors.py  test_demo_mode.py  test_diff.py  test_discovery.py  test_docker.py  test_flow_parser.py  test_import.py  test_metrics.py  test_models.py  test_notifications.py  test_remote.py  test_restore.py  test_retention.py  test_templatetags.py  test_views.py  test_watcher.py
backup/views/: __init__.py  api.py  auth.py  backups.py  pages.py
config/: settings.py  urls.py
docs/adr/: 0000-adr-index.md  0001-nodered-backup-architecture.md  0002-django-app-bootstrapping.md  0003-dockerization-and-basic-auth.md  0004-backup-service-and-flow-parser.md  0005-restore-service-and-docker-service.md  0006-diff-retention-watcher-services.md  0007-settings-page.md  0008-tailwind-css-and-template-components.md  0009-label-delete-endpoints.md  0010-diff-viewer-page.md  0011-error-routes.md  0012-dashboard-actions-dropdown.md  0013-multi-instance-support.md  0014-hybrid-file-watcher.md  0015-backup-notes-annotations.md  0017-bulk-actions.md  (+14 more)
(+35 files in other folders)
