[project]
name = "flowhistory"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-apscheduler>=0.7.0",
    "gunicorn>=25.3.0",
    "whitenoise>=6.12.0",
    "docker>=7.0.0",
    "watchdog>=4.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "DJ",  # flake8-django
]

[tool.ruff.lint.isort]
known-first-party = ["backup", "config"]
