[project]
name = "flowhistory"
version = "0.6.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-apscheduler>=0.7.0",
    "gunicorn>=25.3.0",
    "whitenoise>=6.12.0",
    "docker>=7.0.0",
    "watchdog>=4.0.0",
    "requests>=2.31.0",
    "django-prometheus>=2.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.7",
    "pytest-cov>=4.1",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["backup/tests"]
addopts = ["-v", "--strict-markers", "--tb=short"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["backup"]
branch = true
omit = ["*/migrations/*", "*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "DJ",  # flake8-django
]

[tool.ruff.lint.isort]
known-first-party = ["backup", "config"]
